fix vertical spacing

--- a/components/hint-toggle.module.scss
+++ b/components/hint-toggle.module.scss
@@ -1,6 +1,6 @@
 .hintToggle {
   margin-top: var(--section-margin);
-  flex-grow: 1;
+  margin-bottom: var(--section-margin);
   &__label {
     display: inline-block;
     width: max-content;
