--- a/src/index.scss
+++ b/src/index.scss
@@ -9,15 +9,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  --section-margin: 48px;
+  --section-margin: 52px;
 }
 
 body {
   margin: 0;
   background-color: var(--bgGrey);
-  // display: flex;
-  // flex-direction: column;
-  // min-height: 100vh;
 }
 p {
   margin: 0;
